--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,79 @@
-# compiled output
-/dist
-/node_modules
-/build
+# -------------------------
+# Node.js / NestJS / TypeScript Project
+# -------------------------
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+coverage/
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
+pnpm-debug.log*
 
-# OS
-.DS_Store
-
-# Tests
-/coverage
-/.nyc_output
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# dotenv environment variable files
+# Environment variables
 .env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
 
-# temp directory
-.temp
-.tmp
+# Database / temporary files
+*.sqlite
+*.db
+tmp/
+data/
+uploads/
+storage/
+.DS_Store
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Typescript
+*.tsbuildinfo
+
+# Package managers
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Git merge backups
+*.orig
+
+# Nest CLI cache
+.nest-*
+.cache/
+
+# Optional: test coverage and reports
+coverage/
+*.lcov
+
+# Ignore compiled test files
+test/**/*.js
+test/**/*.js.map
+test/**/*.d.ts
+
+# Optional: if using docker
+docker-compose.override.yml
+docker-compose.yml
+Dockerfile
+
+# Optional: if using XAMPP / local MySQL dumps
+*.sql
+*.bak
+*.dump
