--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
+    "typeorm:revert": "typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
+    "typeorm:generate": "typeorm-ts-node-commonjs migration:generate -d src/data-source.ts -n init"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -33,6 +36,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
     "passport": "^0.7.0",
