--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,11 @@
 DB_TYPE=mysql
-DB_HOST=sql300.infinityfree.com
+DB_HOST=blnvbsewmwyjmnrvhbpi-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_USER=if0_40430778
-DB_PASS=8zpeYsf2RrZKm
-DB_NAME=if0_40430778_kwistore2022
+DB_USER=ukncj9yobsr3optb
+DB_PASS=X1mXIzs0r3dArWhe0LZr
+DB_NAME=blnvbsewmwyjmnrvhbpi
 
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=false
-
 PORT=3000
 JWT_SECRET=supersecret
